--- a/.elog-example.env
+++ b/.elog-example.env
@@ -1,13 +1,12 @@
-# 语雀（Token方式）
-YUQUE_TOKEN=
+
 
 #语雀账号密码模式
-YUQUE_USERNAME=
-YUQUE_PASSWORD=
+YUQUE_USERNAME=17340606752
+YUQUE_PASSWORD=Wwky926996.
 
 # 语雀公共参数
-YUQUE_LOGIN=
-YUQUE_REPO=
+YUQUE_LOGIN=https://www.yuque.com/oneqcc
+YUQUE_REPO=https://www.yuque.com/oneqcc/blog
 
 # 图床相关
 # 腾讯云
