--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yuque-vitepress",
+  "name": "vitepress",
   "version": "1.0.0",
   "description": "语雀 + Elog + VitePress + GitHub Actions + Vercel 文档站点解决方案",
   "main": "index.js",
