--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -41,8 +41,8 @@ jobs:
 
       - name: 配置Git用户名邮箱
         run: |
-          git config --global user.name "1874"
-          git config --global user.email "me@mail.1874.cool"
+          git config --global user.name "oneq"
+          git config --global user.email "fjwky127@163.com"
 
       - name: 提交拉取的文档到GitHub仓库
         run: |
